[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/ground.png" type="Texture" id=1]
[ext_resource path="res://Spatial.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/net.png" type="Texture" id=3]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/behindrocks.png" type="Texture" id=5]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/water.png" type="Texture" id=7]
[ext_resource path="res://Score.tscn" type="PackedScene" id=8]
[ext_resource path="res://main.gd" type="Script" id=9]
[ext_resource path="res://audio/glade-wind-birds-trees.wav" type="AudioStream" id=10]
[ext_resource path="res://sprites/waves.png" type="Texture" id=11]
[ext_resource path="res://sprites/smallRocks.png" type="Texture" id=12]
[ext_resource path="res://audio/background-play-song.mp3" type="AudioStream" id=13]
[ext_resource path="res://sprites/mute.png" type="Texture" id=14]
[ext_resource path="res://sprites/volume.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 736.9, 62.9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 595.678, 80.6933 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.7138, 82.9218 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 1057.73 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 898.401 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="Water" type="Sprite" parent="."]
position = Vector2( 510.667, 284.5 )
scale = Vector2( 0.536111, 0.536111 )
texture = ExtResource( 7 )

[node name="Waves" type="Sprite" parent="Water"]
position = Vector2( 2.92267, 2.58368 )
scale = Vector2( 1.00979, 1.00979 )
texture = ExtResource( 11 )

[node name="Behindrocks" type="Sprite" parent="Water"]
position = Vector2( 8.29002, 280.725 )
scale = Vector2( 1.00518, 1.00518 )
texture = ExtResource( 5 )

[node name="ground" type="Sprite" parent="Water"]
position = Vector2( 133.886, -18.6527 )
scale = Vector2( 1.13817, 1.13817 )
texture = ExtResource( 1 )

[node name="SmallRocks" type="Sprite" parent="Water"]
position = Vector2( -14.9224, 25.1813 )
scale = Vector2( 1.07427, 1.07427 )
texture = ExtResource( 12 )

[node name="fallzone_pl1" type="Area2D" parent="."]
position = Vector2( -226.766, 510.527 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="fallzone_pl1"]
shape = SubResource( 1 )

[node name="fallzone_pl2" type="Area2D" parent="."]
position = Vector2( 1250.8, 510.409 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="fallzone_pl2"]
shape = SubResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 262.064, 17.6389 )
scale = Vector2( 1.01239, 0.923051 )
mass = 0.104082
contacts_reported = 10

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 750, 340 )
SPEED = 300
JUMPFORCE = -900

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 250, 350 )
SPEED = 300
JUMPFORCE = -900

[node name="Score" parent="." instance=ExtResource( 8 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 534.076, 528.738 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 515.15, 368.251 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -2.44088, 2.62704 )
shape = SubResource( 3 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="wall_left" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -9.78385, 274.565 )
shape = SubResource( 4 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 1033.82, 219.461 )
__meta__ = {
"_edit_group_": true
}

[node name="wall_right" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -9.941

[node name="BackGround" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0
autoplay = true

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 971.0
margin_top = 13.0
margin_right = 1011.0
margin_bottom = 53.0
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
expand = true

[connection signal="body_entered" from="fallzone_pl1" to="Ball" method="_on_fallzone_pl1_body_entered"]
[connection signal="body_entered" from="fallzone_pl2" to="Ball" method="_on_fallzone_pl2_body_entered"]
[connection signal="body_entered" from="Ball" to="Ball" method="_on_Ball_body_entered"]
[connection signal="fall_pl_1" from="Ball" to="." method="_on_Ball_fall_pl_1"]
[connection signal="fall_pl_1" from="Ball" to="Score" method="_on_Ball_fall_pl_1"]
[connection signal="fall_pl_2" from="Ball" to="." method="_on_Ball_fall_pl_2"]
[connection signal="fall_pl_2" from="Ball" to="Score" method="_on_Ball_fall_pl_2"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
